products/faucet-service/cd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: faucet-service
  labels:
    app.kubernetes.io/name: faucet-service
