products/faucet-service/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: faucet-service
  labels:
    app.kubernetes.io/name: faucet-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: faucet-service
