products/faucet-service/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faucet-service
  labels:
    app.kubernetes.io/name: faucet-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: faucet-service
                port:
                  number: 8080
